# SelfBalancingTreesVisualizer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  conanfile.py
.github/workflows/: ci.yml
assets/: CMakeLists.txt
assets/images/: CMakeLists.txt
assets/translations/: CMakeLists.txt  SelfBalancingTreesVisualizer_en.ts  SelfBalancingTreesVisualizer_ru.ts
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
cmake/config/: project_description.cmake  translations.cmake
config/: base_cmake_variables.h.in  project_description.in  translations.in  translations_cmake_variables.h.in
qml/: CMakeLists.txt
qml/ui/: Main.qml
source/: avl_tree.cpp  avl_tree.hpp  flattened_tree_model.cpp  flattened_tree_model.h  lib.cpp  main.cpp  node.cpp  node.hpp  node_dto.hpp  translation_controller.cpp  translation_controller.hpp  tree_view_model.cpp  tree_view_model.h
test/: CMakeLists.txt
test/source/: SelfBalancingTreesVisualizer_test.cpp
ui/Pages/: Main.qml
